fix: Properly align left-most article column
The middle, 'correct' article column was actually dynamically sized,
causing the left column to not be.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -95,13 +95,14 @@ override */
     grid-column: 1 / 2;
     text-align: right;
     display: grid;
-    column-gap: 1.5em;
+    column-gap: 0.5em;
     justify-content: right;
 }
 
 .user-picks .articles .wrong,
 .user-picks .articles .correct {
     text-decoration-line: underline;
+    min-width: 2.5em;
 }
 
 .user-picks .articles .wrong {
